--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
 
+  # RIVERPOD START
+  flutter_riverpod: ^2.0.0-dev.9
+  flutter_hooks: ^0.18.5+1
+  # RIVERPOD END
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
