--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+
+  # SERVICES START
   http: ^0.13.4
+  # SERVICES END
 
   # RIVERPOD START
   flutter_riverpod: ^2.0.0-dev.9
   flutter_hooks: ^0.18.5+1
   # RIVERPOD END
+
+  # ROUTING START
+  go_router: ^4.1.0
+  # ROUTING END
 
 dev_dependencies:
   flutter_test:
