--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.15
 
   # SERVICES START
   http: ^0.13.4
+  pinput: ^2.2.11
+  flutter_session_manager: ^1.0.3
   # SERVICES END
 
   # RIVERPOD START
@@ -23,9 +26,9 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   # RIVERPOD END
 
-  # ROUTING START
-  go_router: ^4.1.0
-  # ROUTING END
+  # VIDEO START
+  ext_video_player: ^0.1.2
+  # VIDEO END
 
 dev_dependencies:
   flutter_test:
@@ -36,3 +39,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/images/
